--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,7 @@ provider:
   runtime: python2.7
   region: us-west-2
   versionFunctions: false
+  memorySize: 128
   iamRoleStatements:
       - Effect: Allow
         Action:
